--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@esri/arcgis-rest-common-types": "^1.1.1",
     "@esri/arcgis-rest-items": "^1.1.1",
     "@esri/arcgis-rest-request": "^1.1.1",
+    "axios": "^0.18.0",
     "esri-loader": "^2.2.0",
     "firebase": "^4.12.1",
     "re-base": "^3.2.2",
@@ -22,7 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-    
   },
   "devDependencies": {
     "eslint-config-prettier": "^2.9.0",
