--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "esri-loader": "^2.2.0",
     "firebase": "^4.12.1",
+    "lodash": "^4.17.5",
     "re-base": "^3.2.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
