--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "@esri/arcgis-rest-items": "^1.1.1",
     "@esri/arcgis-rest-request": "^1.1.1",
     "axios": "^0.18.0",
-    "esri-loader": "^2.2.0",
-    "firebase": "^4.12.1",
-    "lodash": "^4.17.5",
+    "esri-loader": "^2.3.0",
+    "firebase": "^4.13.1",
+    "lodash": "^4.17.10",
     "re-base": "^3.2.2",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.0",
+    "semantic-ui-react": "^0.79.1",
     "shortid": "^2.2.8"
   },
   "scripts": {
@@ -29,8 +29,9 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.2",
-    "prettier": "^1.11.1",
+    "lint-staged": "^7.0.5",
+    "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1"
-  }
+  },
+  "homepage": "https://gis.baltimorecity.gov/createMap"
 }
